# py_occam_test

./: README.md  __init__.py  core.py  core7.py  definitions.py  dementia05ApEdC_no_occam_header.yml  fit.py  manager.py  model.py  pyproject.toml  relation.py  search.py  setup.py  state.py  state_space.py  test_occam.ipynb  utils.py  variable_list.py
tests/: conftest.py
tests/test_data/: dementia05ApEdC_no_occam_header.tsv
